--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>pom</packaging>
 
     <properties>
-    	<maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>1.4.0.RELEASE</spring.boot.version>
@@ -17,8 +17,9 @@
     <modules>
         <module>audit</module>
         <module>webservice-tools</module>
+        <module>move-dependencies</module>
     </modules>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
